// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #606C7C;
  height: 18px;
  width: 18px;
}

<button
  class="TableSortingLabel__button"
  data-test-id="cf-ui-table-sorting-label"
  type="button"
>
  <span
    class="emotion-1 TableSortingLabel__button__text"
    tabindex="-1"
  >
    Foo
    <svg
      class="TableSortingLabel__icon TableSortingLabel__icon--asc emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M7 14l5-5 5 5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component inactive 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<button
  class="TableSortingLabel__button"
  data-test-id="cf-ui-table-sorting-label"
  type="button"
>
  <span
    class="emotion-0 TableSortingLabel__button__text"
    tabindex="-1"
  >
    Foo
  </span>
</button>
`;
